# NeuralDriver-Analyzer

./: .gitignore  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.electron.json  vercel.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: main.yml  release.yml
.playwright-mcp/: framebench-report-2026-03-22T19-23-18.html
dist-electron/: main.js
docs/: designsystem.md  phase1.md  phase2.md
electron/: main.ts
landing-page/: LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
landing-page/src/: App.tsx  index.css  main.tsx
landing-page/src/components/: AnimatedGraph.tsx  Button.tsx  FeatureCard.tsx  Header.tsx  Navbar.tsx  StatCard.tsx
landing-page/src/sections/: ComparisonShowcase.tsx  CoreCapabilities.tsx  CredibilitySection.tsx  (+6 more)
public/: manifest.json  sw.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: DemoCTA.tsx  DriverUploadPanel.tsx  DualFanGpu.tsx  FrameTimeChart.tsx  FrameTimeDistribution.tsx  GpuStatusWidget.tsx  GpuTelemetryChart.tsx  Header.tsx  MetricsPanel.tsx  QAAnalysisPanel.tsx  RegressionPanel.tsx  TelemetryWidgets.tsx
src/lib/: analysis.ts  csvParser.ts  csvParserWorker.ts  reportGenerator.ts  sampleData.ts
src/types/: telemetry.ts
supabase/migrations/: 20260311081822_create_telemetry_tables.sql  20260319052720_add_frameview_metadata_columns.sql
