[package]
name = "app"
version = "1.0.0"
description = "FrameBench Analyzer - GPU driver benchmarking and telemetry analysis"
authors = ["Vinodh Shekhar"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tokio = { version = "1", features = ["time"] }

[target.'cfg(debug_assertions)'.dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-log = "2"
